Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -185,7 +185,14 @@ most precise one at the LHC. I am now finalizing this analysis and editing the p
   \\{}The ATLAS Collaboration.
   \\{}In preparation (ATL-COM-PHYS-2014-087) and to be published in EPJC
 
-
+%\cite{Golling:2016gvc}
+\item
+{\bf "Physics at a 100 TeV pp collider: beyond the Standard Model phenomena"}
+  \\{}T.~Golling {\it et al.}
+  \\{}CERN Yellow Report (2017) no.3,  441
+  \\{}doi:10.23731/CYRM-2017-003.441
+  \\{}[arXiv:1606.00947 [hep-ph]].
+ 
 \end{enumerate}
 
 
