--- a/main.tex
+++ b/main.tex
@@ -1,22 +1,7 @@
 \documentclass[12pt]{article}
 \usepackage{fancyhdr}
+\usepackage{xcolor}
 
-%To use pdflatex, uncomment these lines, as well as the \href lines
-%in each entry
-%\usepackage[pdftex,
-%       colorlinks=true,
-%       urlcolor=blue,       % \href{...}{...} external (URL)
-%       filecolor=green,     % \href{...} local file
-%       linkcolor=red,       % \ref{...} and \pageref{...}
-%       pdftitle={Papers by AUTHOR},
-%       pdfauthor={Your Name},
-%       pdfsubject={Just a test},
-%       pdfkeywords={test testing testable},
-%       pagebackref,
-%       pdfpagemode=None,
-%        bookmarksopen=true]{hyperref}
-%usepackage{arial}
-%\renewcommand{\familydefault}{\sfdefault} % San serif
 \renewcommand{\labelenumii}{\arabic{enumi}.\arabic{enumii}}
 \renewcommand{\labelenumi}{[\arabic{enumi}]}
 
@@ -31,17 +16,6 @@
 \fancyhf{}
 \fancyfoot[RO]{\small \tt Cl\'ement Helsens  \space  \space \space \space \space \space \normalsize \textrm{\thepage}}
 
-%%\fancyfoot[RO]{\small \tt Cl\'ement Helsens - Concours CNRS 2013 (01/07)}
-%%\thepage
-
-%\title{}
-%\author{}
-%\date{}
-%\maketitle
-
-
-
-
 
 \begin{center}
 %{\bf \Large  Experimental Physicist at CERN}\\
@@ -49,150 +23,214 @@
 {\bf \Large List of publications} \\
 \end{center}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vskip 1.0 cm
+\noindent 
+Please find below a reduced list of the most significant papers (including work in progress) and conference notes of particular scientific interest on which I was a primary author with substantial contributions to the research. 
 
-\noindent Please find below a reduced list of the ten most significant papers and conference notes of particular scientific interest on which I was a primary author with substantial
-contributions to the research. Full list of publications available upon request.\\
-
-
-\noindent [1]  As a Ph.D. student I studied the discovery potential of heavy neutral gauge bosons decaying into dimuon pairs, $Z^{\prime} \rightarrow \mu^{+}\mu^{-}$. 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [1]}  As a Ph.D. student I studied the discovery potential of heavy neutral gauge bosons decaying into dimuon pairs, $Z^{\prime} \rightarrow \mu^{+}\mu^{-}$. 
 For this purpose I developed a sophisticated statistical method which was adopted by the exotics physics group. For muons of high momentum, 
 the Muon Spectrometer momentum resolution is dominated by the misalignment. I have participated in detailed studies to assess the impact of this effect on $Z^{\prime}$ 
-search sensitivity.\\
+search sensitivity.
 
-\noindent [2] With the very first LHC data I actively participated in the ATLAS top quark physics program, focused on the cross section measurement. 
-I was one of the main analyzers for the first observation of top quark pair production and first cross section measurements with 2.9~pb$^{-1}$ of data at $\sqrt{s}=7$~TeV. 
-I am a primary author of one of the analyses, involving the measurement of the cross section in the single lepton channel using a fit to the three-jet mass distribution. 
-For this analysis I have authored many of the tools needed, such as a performant package to apply corrections to the MC and build the required distributions for detailed data-to-MC
-comparisons. These tools then set the ground for all other Run-I analyses performed in the IFAE-Barcelona top group.
-I have also developed techniques to estimate the multi-jet background in the analysis, to propagate systematic uncertainties from heavy flavor tagging calibrations, 
-and calculate the signal significance. Beyond these important technical contributions, I was directly involved in the final cross section measurement.\\
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [2]} With the very first LHC data I actively participated in the ATLAS top quark physics program, focused on the cross section measurement. I was one of the main analyzers for the first observation of top quark pair production and first cross section measurements with 2.9~pb$^{-1}$ of data at $\sqrt{s}=7$~TeV. I am a primary author of one of the analyses, involving the measurement of the cross section in the single lepton channel using a fit to the three-jet mass distribution. For this analysis I have authored many of the tools needed, such as a performant package to apply corrections to the MC and build the required distributions for detailed data-to-MC comparisons. These tools then set the ground for all other Run-I analyses performed in the IFAE-Barcelona top group. I have also developed techniques to estimate the multi-jet background in the analysis, to propagate systematic uncertainties from heavy flavor tagging calibrations, and calculate the signal significance. Beyond these important technical contributions, I was directly involved in the final cross section measurement.
 
-\noindent [3] With 35~pb$^{-1}$ of data at $\sqrt{s}=7$~TeV I continued to be involved in the development of the $t\bar{t}$ cross section analysis optimizing the top mass reconstruction 
-used in the template fit method to extract the cross section.\\
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [3]} With 35~pb$^{-1}$ of data at $\sqrt{s}=7$~TeV I continued to be involved in the development of the $t\bar{t}$ cross section analysis optimizing the top mass reconstruction used in the template fit method to extract the cross section.
 
-\noindent [4] Given the large number of collisions quickly delivered by LHC in 2011, I stopped my involvement in $t\bar{t}$ cross section measurement to focus on $4^{th}$ generation quark searches.
-Since the beginning of the heavy top-like quark analysis, I have been the contact person in the collaboration. I am the main contributor of the first $t^{\prime}\bar{t^{\prime}} \rightarrow WbWb$ 
-analysis in the single lepton channel in ATLAS with
-1~fb$^{-1}$ of data at $\sqrt{s}=7$~TeV. I developed a user friendly interface to an already existing limit setting code that was used by about 10 published analysis in the 
-ATLAS exotic group, and is still used by several analyses close to final Run-I publication. I was also editor of the internal documentation.\\
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [4]} Given the large number of collisions quickly delivered by LHC in 2011, I stopped my involvement in $t\bar{t}$ cross section measurement to focus on $4^{th}$ generation quark searches. Since the beginning of the heavy top-like quark analysis, I have been the contact person in the collaboration. I am the main contributor of the first $t^{\prime}\bar{t^{\prime}} \rightarrow WbWb$ analysis in the single lepton channel in ATLAS with 1~fb$^{-1}$ of data at $\sqrt{s}=7$~TeV. I developed a user friendly interface to an already existing limit setting code that was used by about 15 published analysis in the ATLAS exotic group. I was also editor of the internal documentation.
 
-\noindent [5] With the full 4.9~fb$^{-1}$ dataset at $\sqrt{s}=7$~TeV, I was the main contributor to improving the result published in [4] using boosted $W$ bosons. 
-I also developed all the methodology and tools to interpret the results in terms of vector-like quark, this analysis being the first one interpreting the results in a quasi model independent 
-way. All my procedures and tools were adopted by all four other vector-like quarks analyses. 
-I was also editor of the internal documentation.\\
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [5]} With the full 4.9~fb$^{-1}$ dataset at $\sqrt{s}=7$~TeV, I was the main contributor to improving the result published in {\bf \color{red} [4]} using boosted $W$ bosons. I also developed all the methodology and tools to interpret the results in terms of vector-like quark ($T \rightarrow Wb,Ht, Zt$), this analysis being the first one interpreting the results in a quasi model independent way. All my procedures and tools were adopted by all four other vector-like quarks analyses. I was also editor of the internal documentation.
 
-\noindent [6] Previous vector-like top searches focused on $t^{\prime} \rightarrow Wb$, but after the observation of a Higgs boson with a mass of approximatively 125 GeV 
-by the ATLAS and CMS collaborations, $t^{\prime} \rightarrow Hb$ became an important aspect of the vector-like top search strategy. 
-For a SM-like Higgs boson, the dominant decay mode at this mass is through $b\bar{b}$, thus it is important to develop a new analysis sensitive to a large number of jets and $b-$jets,
-in order to extend the sensitivity to vector-like quarks $t^{\prime} \rightarrow Ht, H \rightarrow b\bar{b}$. I was the main analyzer developing the $t^{\prime}\bar{t^{\prime}} \rightarrow Ht+X$ 
-with 14.3~fb$^{-1}$ at $\sqrt{s}=8$~TeV. I was also editor of the internal documentation.\\
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [6]} Previous vector-like top searches focused on $4^{th}$ generation $t^{\prime} \rightarrow Wb$, but after the observation of a Higgs boson with a mass of approximatively 125 GeV by the ATLAS and CMS collaborations, $T \rightarrow Hb$ became an important aspect of the vector-like top search strategy. For a SM-like Higgs boson, the dominant decay mode at this mass is through $b\bar{b}$, thus it is important to develop a new analysis sensitive to a large number of jets and $b-$jets, in order to extend the sensitivity to vector-like quarks $T \rightarrow Ht, H \rightarrow b\bar{b}$. I was the main analyzer developing the $T\bar{T} \rightarrow Ht+X$ with 14.3~fb$^{-1}$ at $\sqrt{s}=8$~TeV. I was also editor of the internal documentation.
 
-\noindent [7] With 14.3~fb$^{-1}$at $\sqrt{s}=8$~TeV, I was the main analyzer updating the result in [5] to search for  $t^{\prime}\bar{t^{\prime}} \rightarrow Wb+X$.
-I performed the first ATLAS vector-like top combination of $t^{\prime}\bar{t^{\prime}} \rightarrow Ht+X$ and $ Wb+X$. I was also editor of the internal documentation.\\
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [7]} With 14.3~fb$^{-1}$at $\sqrt{s}=8$~TeV, I was the main analyzer updating the result in {\bf \color{red} [5]} to search for  $T\bar{T} \rightarrow Wb+X$. I performed the first ATLAS vector-like top combination of $T\bar{T} \rightarrow Ht+X$ and $ Wb+X$. I was also editor of the internal documentation.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [8]} The $B\bar{B} \rightarrow Zb+X$ is an other fundamental aspect to complete the generic search for vector-like quarks. I played a major role in this 8~TeV analyse by providing the tools and all my expertise in  understanding and interpreting the results in terms of vector-like quarks. 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [9]} With the full 2012 dataset of 20.3~fb$^{-1}$ I finalized the search for $T\bar{T} \rightarrow Wb+X$  for Run-I legacy publication being the main analyzer. The preliminary result has been presented for the first time at the Moriond EW 2105 conference and represented the most stringent constraints on observed lower limits for pair produced heavy up type quarks. The paper has been published few month after.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [10]} After having performed various direct search for new physics I decided to focus on the precision measurement of the charge asymmetry in top quark pair production, measurement that indirectly probe hints of possible new physics contribution in top-pair production. I was the main analyser of the lepton+jet analysis and the editor of the paper. At the same time I was coordinating the overall ATLAS charge asymmetry effort composed of two other topologies.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [11]} To further promote the Fully Bayesian Unfolding python implementation developed for the charge asymmetry in $t\bar{t}$ events I am in the process of writing a paper that explains the method and the main features of the tool like: channel combination and marginalisation of nuisance parameters. It also comes with detailed examples. 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [12]} In this CDR is documented part of the work done for the search for heavy resonances at FCC-hh. My work has also been used to estimate sensitivity of FCC-hh to Higgs couplings (including self-coupling) and super-symetric top partners. I am also an editor of that volume.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [13]} In this CDR is documented part of the work done for the calorimeters where I am one of the main contributors and I edited the section. 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [14]} In this CDR are documented part of the work done for the search for heavy resonances at HE-LHC {\bf \color{red} [17]} where I am the main contributor.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [15]} With a center of mass energy of 100 TeV a completely new energy regime is opening and heavy particles such as extra-gauge bosons might decay hadronically, leading to final states in the detector with two very high energetic jets. At those energies, the resolution of the hadronic calorimeter is dominated by its constant term consequently the longitudinal leakage of  hadronic showers will play a major role in the calorimeter resolution. In order to measure precisely these objects, the calorimeter requirements with respect to the LHC experiments, have to be reconsidered. This paper motivates, by the use of a detailed full simulation, the longitudinal depth needed in terms of number of interaction length. In this paper, I derived the jet results and participated in the description of the detector in simulation.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [16]} In the description of the hadronic physics of Geant4 simulations there is an important missing component for FCC-hh energies. The gluon-jet emissions in the hadronic interactions modelled by the hadronic string models of Geant4 does not exists. Concretly, this means that for a hadron of few TeV, and having a strong interaction with a nucleus all the secondary hadrons are produced by the fragmentation of strings formed by the constituent quarks of the projectile hadron and the participants nucleons of the target nucleus. There are no secondary hadrons produced by the fragmentation of gluons radiated by one of the quarks involved in the interaction. This simplified approach is sufficient at LHC, where single hadrons have rarely energies above TeV. But this is not the case for FCC-hh, where the most energetic jets can have constituent hadrons of energies above TeV: the strong interactions of these energetic hadrons in the detector are therefore not properly simulated by the current Geant4 simulations. The impact of this limitation to the expected jet energy resolution for the most energetic jets at the FCC-hh detector is unknown. An estimate is planned in the coming months, by interfacing Geant4 with a cosmic-ray hadronic generator, such as EPOS, to handle the simulation of hadronic interactions at very high energies, and passing then back to Geant4 the secondary hadrons that are produced by this external generator. I am at the initiative of the project and I supervise the work.
 
 
-\noindent [8] The $b^{\prime}\bar{b^{\prime}} \rightarrow Zb+X$ is an other fundamental aspect to complete the generic search for vector-like quarks.
-I played a major role in this 8~TeV analyse by providing the tools and all my expertise in  understanding and interpreting the results in terms of vector-like quarks. \\
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [17]} This publication aims at summarising in one paper all the work being done for the search of heavy resonances at the energy frontier. It includes results of benchmark searches for heavy object at both FCC-hh and HE-LHC such as $Z'$ to di-lepton and di-top, Graviton to di-boson and Excited quarks to di-jet. It also contains the discriminating potential of HE-LHC in case a signal seen in the di-lepton channel at the end of HL-LHC. I am the main contributor of this paper.
 
-\noindent [9] With the full 2012 dataset of 20.3~fb$^{-1}$ I finalized the search for $T\bar{T} \rightarrow Wb+X$  for Run-I legacy publication being the main analyzer.
-This preliminary result has been presented for the first time at the Moriond EW 2105 conference and represents the most stringent constraints to date on observed lower limits for pair produced heavy up type quarks.  \\
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [18]} In this yellow report are documented part of the work done for the search for heavy resonances at HE-LHC {\bf \color{red} [17]} where I am the main contributor.
 
-\noindent [10] After having performed various direct search for new physics I decided to focus on the precision measurement of the charge asymmetry in top quark pair production, 
-measurement that indirectly probe hints of possible new physics contribution in top-pair production. I am leading this analysis, and results indicate that this measurement will be the 
-most precise one at the LHC. I am now finalizing this analysis and editing the paper for internal review before publication in the coming two months.\\
-
-
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5 cm
+\noindent {\bf \color{red} [19]} As member of the top upgrade team, my contribution in the publication of the Standard Model and top HL/HE-LHC Yellow Report was to follow in details the corresponding ATLAS analyses. I also reviewed the contributions for quality publication.
 
 \vskip 1.0 cm
-{\bf \Large  References }\\
+{\bf \Large  References }
 \vskip 1.0 cm
 
 \begin{enumerate}
 %[1]
 \item
- {\bf ``Expected Performance of the ATLAS Experiment - Detector, Trigger and Physics''}
-  \\{}G.~Aad {\it et al.}  [ATLAS Collaboration].
+ {\bf "Expected Performance of the ATLAS Experiment - Detector, Trigger and Physics"}
+  \\{}G.~Aad {\it et al.}  [ATLAS Collaboration],
   \\{}arXiv:0901.0512 [hep-ex]
 
 %[2]
 \item 
-  {\bf ``Measurement of the top quark-pair production cross section with ATLAS in pp collisions at $\sqrt{s}=7$ TeV''}
-  \\{}G.~Aad {\it et al.}  [Atlas Collaboration].
-  \\{}arXiv:1012.1792 [hep-ex]
-  \\{}10.1140/epjc/s10052-011-1577-6
-  \\{}Eur.\ Phys.\ J.\ C {\bf 71}, 1577 (2011)
+  {\bf "Measurement of the top quark-pair production cross section with ATLAS in pp collisions at $\sqrt{s}=7$ TeV"}
+\\{}G.~Aad {\it et al.}  [Atlas Collaboration],
+\\{}Eur.\ Phys.\ J.\ C {\bf 71}, 1577 (2011), arXiv:1012.1792 [hep-ex]
 
 %[3]
 \item
-  {\bf ``Measurement of the top quark-pair production cross section with ATLAS in the single lepton channel''}
-  \\{}G.~Aad {\it et al.}  [ATLAS Collaboration].
-  \\{}arXiv:1201.1889 [hep-ex]
-  \\{}10.1016/j.physletb.2012.03.083
-  \\{}Phys.\ Lett.\ B {\bf 711}, 244 (2012)
+  {\bf "Measurement of the top quark-pair production cross section with ATLAS in the single lepton channel"}
+  \\{}G.~Aad {\it et al.}  [ATLAS Collaboration],
+  \\{}Phys.\ Lett.\ B {\bf 711}, 244 (2012), arXiv:1201.1889 [hep-ex]
 
 %[4]
 \item
- {\bf ``Search for pair production of a heavy up-type quark decaying to a W boson and a b quark in the lepton+jets channel with the ATLAS detector''}
-  \\{}G.~Aad {\it et al.}  [ATLAS Collaboration].
-  \\{}arXiv:1202.3076 [hep-ex]
-  \\{}10.1103/PhysRevLett.108.261802
-  \\{}Phys.\ Rev.\ Lett.\  {\bf 108}, 261802 (2012)
+ {\bf "Search for pair production of a heavy up-type quark decaying to a W boson and a b quark in the lepton+jets channel with the ATLAS detector"}
+  \\{}G.~Aad {\it et al.}  [ATLAS Collaboration],
+  \\{}Phys.\ Rev.\ Lett.\  {\bf 108}, 261802 (2012), arXiv:1202.3076 [hep-ex]
 
 %[5]
 \item
-  {\bf ``Search for pair production of heavy top-like quarks decaying to a high-$p_{\rm T}$ $W$ boson and a $b$ quark in the lepton plus jets final state at $\sqrt{s}=7$ TeV with the ATLAS detector''}
+  {\bf "Search for pair production of heavy top-like quarks decaying to a high-$p_{\rm T}$ $W$ boson and a $b$ quark in the lepton plus jets final state at $\sqrt{s}=7$ TeV with the ATLAS detector"}
   \\{}G.~Aad {\it et al.}  [ATLAS Collaboration].
-  \\{}arXiv:1210.5468 [hep-ex]
-    \\{}10.1016/j.phcysletb.2012.11.071
-\\{}Phys.\ Lett.\ B {\bf 718}, 1284 (2013) 
+\\{}Phys.\ Lett.\ B {\bf 718}, 1284 (2013), arXiv:1210.5468 [hep-ex]
 
 %[6]
 \item
-{\bf ``Search for heavy top-like quarks decaying to a Higgs boson and a top quark in the lepton plus jets final state in $pp$ collisions at $\sqrt{s}=$~8~TeV with the ATLAS detector''}
+{\bf "Search for heavy top-like quarks decaying to a Higgs boson and a top quark in the lepton plus jets final state in $pp$ collisions at $\sqrt{s}=$~8~TeV with the ATLAS detector"}
   \\{}The ATLAS Collaboration.
   \\{}ATLAS-CONF-2013-018
   
 %[7]
 \item
-{\bf ``Search for pair production of heavy top-like quarks decaying to a high-$p_{\rm T}$ $W$ boson and a $b$ quark in the lepton plus jets final state in $pp$ collisions at $\sqrt{s}=$~8~TeV with the ATLAS detector''}
+{\bf "Search for pair production of heavy top-like quarks decaying to a high-$p_{\rm T}$ $W$ boson and a $b$ quark in the lepton plus jets final state in $pp$ collisions at $\sqrt{s}=$~8~TeV with the ATLAS detector"}
   \\{}The ATLAS Collaboration.
  \\{}ATLAS-CONF-2013-060
 
 %[8]
 \item
-{\bf ``Search for pair and single production of new heavy quarks that decay to a $Z$ boson and a third generation quark in $pp$ collisions at $\sqrt{s}=~$8~TeV with the ATLAS detector''}
-  \\{}G. Aad et al. (ATLAS Collaboration) (2014), 1409.5500
-   \\{}arXiv:1409.5500 [hep-ex]
-   \\{}JHEP {\bf 1411} (2014) 104
+{\bf "Search for pair and single production of new heavy quarks that decay to a $Z$ boson and a third generation quark in $pp$ collisions at $\sqrt{s}=~$8~TeV with the ATLAS detector"}
+\\{}G.~Aad {\it et al.} [ATLAS Collaboration],
+\\{}JHEP {\bf 1411} (2014) 104, arXiv:1409.5500 [hep-ex].
    
-%[9]
-%\item
-%{\bf ``Search for anomalous production of events with same-sign dileptons and b jets in 14.3~fb$^{-1}$ of $pp$ collisions at $\sqrt{s}=$~8~TeV with the ATLAS detector''}
-%  \\{}The ATLAS Collaboration.
-%  \\{}ATLAS-CONF-2013-051
 
 %[9]
- \item
-{\bf "Search for production of vector-like quark pairs and of four top quarks in the lepton plus jets final state in $pp$ collisions at $\sqrt{s}=~$8~TeV with the ATLAS detector"}
-\\{}The ATLAS Collaboration.
-\\{}Presented at Moriond EW 2015, and to be published in JHEP
+\item
+ {\bf "Search for production of vector-like quark pairs and of four top quarks in the lepton-plus-jets final state in $pp$ collisions at $\sqrt{s}=8$ TeV with the ATLAS detector"}
+\\{}  G.~Aad {\it et al.} [ATLAS Collaboration],
+\\{} JHEP {\bf 1508} (2015) 105, arXiv:1505.04306 [hep-ex].
+  
 
 %[10]
 \item
-{\bf ``Measurement of the charge asymmetry in top quark pair production in pp collision data at $\sqrt{s}=$~8~TeV using the ATLAS detector''}
-  \\{}The ATLAS Collaboration.
-  \\{}In preparation (ATL-COM-PHYS-2014-087) and to be published in EPJC
-
-%\cite{Golling:2016gvc}
-\item
-{\bf "Physics at a 100 TeV pp collider: beyond the Standard Model phenomena"}
-  \\{}T.~Golling {\it et al.}
-  \\{}CERN Yellow Report (2017) no.3,  441
-  \\{}doi:10.23731/CYRM-2017-003.441
-  \\{}[arXiv:1606.00947 [hep-ph]].
+{\bf "Measurement of the charge asymmetry in top-quark pair production in the lepton-plus-jets final state in pp collision data at $\sqrt{s}=8\,\mathrm TeV{}$ with the ATLAS detector"}
+\\{}G.~Aad {\it et al.} [ATLAS Collaboration],
+\\{}Eur.\ Phys.\ J.\ C {\bf 76} (2016) no.2, 87, arXiv:1509.02358 [hep-ex]
  
+%[11]
+\item
+{\bf "A python implementation of the Fully Bayesian Unfolding"}
+\\{}  D.~Gerbaudo, C.~Helsens, F.~Rubbo
+\\{}  expected spring 2019
+ 
+ 
+%[12]
+\item
+{\bf "Future Circular Collider : Vol. 1 Physics opportunities"}
+\\{}  M.~Mangano {\it et al.},
+\\{}  CERN-ACC-2018-0056 (Submitted to Eur. Phys. J. C)
+
+%[13]
+\item
+{\bf "Future Circular Collider : Vol. 3: The Hadron Collider (FCC-hh) Conceptual Design Report"}
+\\{}M. Benedikt {\it et al.},
+\\{}CERN-ACC-2018-0058 (Submitted to Eur. Phys. J. ST.)
+
+%[14]
+\item
+{\bf "Future Circular Collider : Vol. 4: The High Energy LHC (HE-LHC) Conceptual Design Report"}
+ontainment and resolution of hadronic showers at the FCCF. Zimmermann  {\it et al.},
+\\{}CERN-ACC-2018-0059 (Submitted to Eur. Phys. J. ST.)
+
+%[15]
+\item
+{\bf "Containment and resolution of hadronic showers at the FCC"}
+\\{} T.~Carli, C.~Helsens, A.~Henriques Correia and C.~Solans S\'anchez,
+\\{} JINST {\bf 11} (2016) no.09,  P09012, arXiv:1604.01415 [physics.ins-det]
+ 
+%[16]
+\item
+{\bf "Limitations of the gluon-jet emission in high-energeic hadronic showers"}
+\\{} C.~Helsens, A.~Ribon and V.~Volkl,
+\\{} expected spring 2019
+
+%[17]
+\item
+{\bf "Beyond the Standard Model Physics at the HL-LHC and HE-LHC""}
+\\{}  X.~Cid Vidal  {\it et al.},
+\\{}  arXiv:1812.07831 [hep-ph].
+
+%[18]
+\item
+{\bf "Heavy resonances at energy frontier colliders"}
+\\{} C.~Helsens, D.~Jamin, M.~L.~Mangano, T.~G.~Rizzo, M.~Selvaggi
+\\{} expected winter 2019
+
+%[19]
+\item
+{\bf "Standard Model Physics at the HL-LHC and HE-LHC"}
+\\{} P.~Azzi {\it et al.},
+\\{} under final editing
+
+
 \end{enumerate}
 
 
